<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="40dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:gravity="center"
        android:textAlignment="center"
        android:orientation="vertical">
        <!--ID-->
        <LinearLayout
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:background="@drawable/form_borders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/hintId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/id"
                    android:inputType="number"
                    android:textColor="@color/blue"
                    android:textColorHint="@color/blue"
                    android:textSize="@dimen/font_size_med"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <!--Pass-->
        <LinearLayout
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:background="@drawable/form_borders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/hintPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/blue"
                    android:textColorHint="@color/blue"
                    android:textSize="@dimen/font_size_med"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <!--Checkbox remember me-->
        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/form_borders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chbRem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember"
                android:textColor="@color/blue"
                android:textSize="@dimen/font_size_mini"
                android:checked="true"/>
        </LinearLayout>
        <!--Button Sing in-->
        <LinearLayout
            android:background="@drawable/form_borders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_big"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>